--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "framer-motion": "^10.18.0",
     "leaflet": "^1.9.4",
     "next": "14.0.4",
+    "next-auth": "^4.24.7",
     "pannellum": "^2.5.6",
     "phosphor-react": "^1.4.1",
     "rc-slider": "^10.5.0",
