--- a/client/.env
+++ b/client/.env
@@ -1,1 +1,2 @@
-NEXT_PUBLIC_BACKEND_URL=https://qq7gmdh9-8080.inc1.devtunnels.ms/
+# NEXT_PUBLIC_BACKEND_URL=https://qq7gmdh9-8080.inc1.devtunnels.ms/
+NEXT_PUBLIC_BACKEND_URL=http://localhost:8080/
